// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateAccount renders CreateAccount component 1`] = `
<div
  className="root"
>
  <h2>
    <mock-FormattedMessage
      defaultMessage="Quick Checkout When You Return"
      id="checkoutPage.quickCheckout"
    />
  </h2>
  <p>
    <mock-FormattedMessage
      defaultMessage="Set a password and save your information for next time in one easy step!"
      id="checkoutPage.setAPasswordAndSave"
    />
  </p>
  <FormError
    errors={Array []}
  />
  <form
    className="form"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="root"
    >
      <label
        className="label"
      >
        First Name
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            autoComplete="given-name"
            className="input"
            id="ca5488c3-9cfb-4347-844f-d37d9cf0fd57"
            name="customer.firstname"
            onBlur={[Function]}
            onChange={[Function]}
            value="Avatar"
          />
        </span>
        <span
          className="before"
        />
        <span
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="root"
    >
      <label
        className="label"
      >
        Last Name
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            autoComplete="family-name"
            className="input"
            id="4d6d2c99-426f-498e-82fa-f57f7fce3610"
            name="customer.lastname"
            onBlur={[Function]}
            onChange={[Function]}
            value="Aang"
          />
        </span>
        <span
          className="before"
        />
        <span
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="root"
    >
      <label
        className="label"
      >
        Email
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            autoComplete="email"
            className="input"
            id="67d4e773-6dde-4fb5-89e4-2c76f3f0daca"
            name="customer.email"
            onBlur={[Function]}
            onChange={[Function]}
            value="thelastairbender@example.com"
          />
        </span>
        <span
          className="before"
        />
        <span
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="root"
    >
      <label
        className="label"
      >
        Password
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 1,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            autoComplete="new-password"
            className="input"
            id="fab408f6-c2ad-4701-a942-5b4904479948"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            type="password"
            value=""
          />
        </span>
        <span
          className="before"
        />
        <span
          className="after"
        >
          <button
            className="passwordButton"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="content"
            >
              <svg
                fill="none"
                height="24"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
                />
                <line
                  x1="1"
                  x2="23"
                  y1="1"
                  y2="23"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="subscribe"
    >
      <label
        className="root"
        htmlFor="75adc01e-c5e8-4d68-b2f7-32a1a3e2e094"
      >
        <input
          checked={false}
          className="input"
          id="75adc01e-c5e8-4d68-b2f7-32a1a3e2e094"
          name="subscribe"
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="icon"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
          </svg>
        </span>
        <span
          className="label"
        >
          Subscribe to news and updates
        </span>
      </label>
      <p
        className="root"
      />
    </div>
    <div
      className="actions"
    >
      <button
        className="create_account_button"
        disabled={false}
        type="submit"
      >
        <span
          className="content"
        >
          <mock-FormattedMessage
            defaultMessage="Create Account"
            id="checkoutPage.createAccount"
          />
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`CreateAccount renders errors 1`] = `
<div
  className="root"
>
  <h2>
    <mock-FormattedMessage
      defaultMessage="Quick Checkout When You Return"
      id="checkoutPage.quickCheckout"
    />
  </h2>
  <p>
    <mock-FormattedMessage
      defaultMessage="Set a password and save your information for next time in one easy step!"
      id="checkoutPage.setAPasswordAndSave"
    />
  </p>
  <FormError
    errors={
      Array [
        [Error: Oops.],
      ]
    }
  />
  <form
    className="form"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="root"
    >
      <label
        className="label"
      >
        First Name
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            autoComplete="given-name"
            className="input"
            id="cf3e8675-eb9d-4b52-8dad-3b2aeef57330"
            name="customer.firstname"
            onBlur={[Function]}
            onChange={[Function]}
            value="Avatar"
          />
        </span>
        <span
          className="before"
        />
        <span
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="root"
    >
      <label
        className="label"
      >
        Last Name
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            autoComplete="family-name"
            className="input"
            id="c212a17d-0c86-4fab-86da-3cafd3838c50"
            name="customer.lastname"
            onBlur={[Function]}
            onChange={[Function]}
            value="Aang"
          />
        </span>
        <span
          className="before"
        />
        <span
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="root"
    >
      <label
        className="label"
      >
        Email
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            autoComplete="email"
            className="input"
            id="61682d4e-e266-4776-a7d8-eeeb452023f7"
            name="customer.email"
            onBlur={[Function]}
            onChange={[Function]}
            value="thelastairbender@example.com"
          />
        </span>
        <span
          className="before"
        />
        <span
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="root"
    >
      <label
        className="label"
      >
        Password
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 1,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            autoComplete="new-password"
            className="input"
            id="7cab23c2-4a4e-44cd-9280-f89d63cae84f"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            type="password"
            value=""
          />
        </span>
        <span
          className="before"
        />
        <span
          className="after"
        >
          <button
            className="passwordButton"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="content"
            >
              <svg
                fill="none"
                height="24"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
                />
                <line
                  x1="1"
                  x2="23"
                  y1="1"
                  y2="23"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="subscribe"
    >
      <label
        className="root"
        htmlFor="d915c722-a6e1-4edd-a5e3-3a2fa59040fa"
      >
        <input
          checked={false}
          className="input"
          id="d915c722-a6e1-4edd-a5e3-3a2fa59040fa"
          name="subscribe"
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="icon"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
          </svg>
        </span>
        <span
          className="label"
        >
          Subscribe to news and updates
        </span>
      </label>
      <p
        className="root"
      />
    </div>
    <div
      className="actions"
    >
      <button
        className="create_account_button"
        disabled={false}
        type="submit"
      >
        <span
          className="content"
        >
          <mock-FormattedMessage
            defaultMessage="Create Account"
            id="checkoutPage.createAccount"
          />
        </span>
      </button>
    </div>
  </form>
</div>
`;
